[gd_scene load_steps=3 format=3 uid="uid://k2lda7m2iefe"]

[ext_resource type="FontFile" uid="uid://nl47vuv24jg1" path="res://images/test.fnt" id="1_477lj"]
[ext_resource type="Script" path="res://scripts/menu_title_screen.gd" id="1_efb4v"]

[node name="MenuTitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.09524, 3.09524)
script = ExtResource("1_efb4v")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 340.0
offset_bottom = 80.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_477lj")
text = "Play            =)"

[node name="LevelSelect" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_477lj")
text = "Select level   8)"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_477lj")
text = "Options         :0"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_477lj")
text = "Quit             ;("

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LevelSelect" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
